--- a/assets/MacGap.app/Contents/Resources/public/index.html
+++ b/assets/MacGap.app/Contents/Resources/public/index.html
@@ -21,12 +21,16 @@
     }
   </style>
   
-  <meta http-equiv="refresh" content="5;url=http://google.com">  
 </head>
 <body>
   
   <script type="text/javascript" charset="utf-8">
-      macgap.growl.notify({title: 'MacGap', content: 'Hello World'});
+      macgap.notice.notify({title: 'MacGap', content: 'Hello World'});
+      
+      var fs = require('fs');
+      fs.readdir('/tmp', function(e, files){
+        console.log(files);
+      })
   </script>
   
   <h1>MacGap</h1>
